# hpc4ai_study

./: .gitignore  README.md
DLSystem_CMU/hw0_overviewDL/: Makefile  hw0.ipynb
DLSystem_CMU/hw1_autodiff/: hw1.ipynb
DLSystem_CMU/lecture5_autodiff/: 5_automatic_differentiation_implementation.ipynb
Yolo_model/: parameters.txt  readTxt  readTxt.cpp  readTxt_vewctor.cpp
convolutionOP/: deformable_conv.ipynb  im2col.html  im2col.ipynb  implicit_GEMM_conv.ipynb  implicit_GEMM_conv_fp16  implicit_GEMM_conv_fp16.cu  run.sh
demo_DualNumber/: DualNumber.hpp  a.out  demoDual.cpp
demo_Gemm/: gemm_v1.cu  gemm_v1_1.cu  log copy  log1  main  performance.ipynb  run.sh  sgemm_comp_final.cu  sgemv_comp_final.cu
demo_autograd/: 05.forward_mode.ipynb  06.reversed_mode.ipynb
demo_cuda/: bitonic_sort.cu  demoHistogram  demoHistogram.cu  demoMatrixAdd  demoMatrixAdd.cu  demoReduceAdd  demoReduceAdd.cu  demoSort  demoSort.cu  helper_cuda.h  profileCom.ncu-rep  radixSort_float.cpp  radix_select_topk.cu  run.sh  scan_op.cu  ticktockCPUGPU.h
demo_pybind11/: CMakeLists.txt  demo_example.ipynb  example.cpp  run.sh  tensor_demo1.cu
demo_tensorrt/: a.out  demo.cu  run.sh
demo_yoloproposal/: softmax.cu
pytorch_alexnet/: AlexNet.html  AlexNet.ipynb
pytorch_cnn/: LeNet5.engine  LeNet5_TensorRT.cu.html  LeNet5_TensorRT.cu.md  input_data_lenet5.txt  lenet5.ipynb  lenet5_tensorrt  lenet5_tensorrt.cu  log  run.sh
pytorch_resnet/: ResNet.html  ResNet.ipynb
tensorrt_resnet/: run.sh
transformer/: VisionTransformer.ipynb  model.html  model.ipynb
(+5 files in other folders)
